[package]
name = "bulletproof"
version = "1.1.0"
authors = [
    "Omer Shlomovits <omer@kzencorp.com>",
    "Suyash Bagad <suyashnbagad1997@gmail.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
curv = { git = "https://github.com/commerceblock/curv" , tag = "v0.2.7", features =  ["ec_secp256k1"]}
itertools = "0.9.0"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "range_proof"
path = "benches/range_proof.rs"
harness = false