[package]
name = "bulletproof"
version = "1.1.1"
authors = [
    "Omer Shlomovits <omer@kzencorp.com>",
    "Suyash Bagad <suyashnbagad1997@gmail.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
itertools = "0.9.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.curv]
git = "https://github.com/commerceblock/curv"
features =  ["ec_secp256k1"]
branch = "client_version"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "range_proof"
path = "benches/range_proof.rs"
harness = false
